--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-dom": "19.2.3",
     "shadcn": "^3.6.3",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
@@ -38,6 +39,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.39.2",
     "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "stylelint": "^16.26.1",
     "tailwindcss": "^4",
     "typescript": "^5",
