--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "livekit-client": "^2.16.1",
+    "livekit-server-sdk": "^2.15.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "radix-ui": "^1.4.3",
