--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@base-ui/react": "^1.0.0",
     "@livekit/agents": "~1.0.32",
+    "@livekit/agents-plugin-deepgram": "1.x",
     "@livekit/agents-plugin-livekit": "~1.0.32",
     "@livekit/agents-plugin-silero": "~1.0.32",
     "@livekit/noise-cancellation-node": "~0.1.9",
