--- a/scraper/pcpartpicker/api/pyproject.toml
+++ b/scraper/pcpartpicker/api/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "pcpartpicker-api"
 version = "0.1.0"
-requires-python = ">=3.14"
+requires-python = ">=3.11"
 dependencies = [
     "aiosqlite>=0.22.1",
     "fastapi>=0.128.0",
     "google-genai>=1.57.0",
+    "greenlet>=3.3.0",
     "openai>=2.15.0",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.21",
