--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@livekit/agents-plugin-livekit": "~1.0.32",
     "@livekit/agents-plugin-silero": "~1.0.32",
     "@livekit/noise-cancellation-node": "~0.1.9",
+    "@tensorflow/tfjs": "^4.22.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
