--- a/client/package.json
+++ b/client/package.json
@@ -31,8 +31,10 @@
     "react-dom": "19.2.3",
     "shadcn": "^3.6.3",
     "tailwind-merge": "^3.4.0",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
